# cookiecutter-pypackage

./: .editorconfig  cookiecutter.json  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: dev.yml
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml
{{cookiecutter.project_slug}}/docs/: installation.md
